[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openopticalflow"
version = "0.1.0"
description = "A Python package for optical flow analysis"
readme = "README.md"
authors = [
    {name = "OpenOpticalFlow Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=openopticalflow"

[tool.coverage.run]
source = ["openopticalflow"]
